Add footer for this claimer

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
             font-size: 3.5rem;
             text-align: center;
         }
+        .ub-footer {
+            font-size: 0.8rem;
+            color: #666;
+            margin-top: 2rem;
+        }
     </style>
 </head>
 <body>
@@ -74,6 +79,7 @@
         <div id="status" class="status">CHECKING...</div>
         <div id="info-source" class="info-source"><i>Source? Trust me bro</i></div>
     </div>
+    <footer class="ub-footer">actually, trust me not<br>unless you're feeling brave<br>for I'm but a bot<br>seeing shadows in a cave</footer>
 
     <script>
         function updateStatus() {
